--- a/web-app-fitnessactive/app.html
+++ b/web-app-fitnessactive/app.html
@@ -24,7 +24,7 @@
         <!-- --------------- Header -------------- -->
         <div class = "jumbotron gym_header">
             <div class = "container gym_header">
-                <a href = "app.html">
+                <a href = "#">
                     <img id = "logo" src ="images/logo.jpeg">
                 </a>
             </div>
